<?xml version="1.0" encoding="utf-8"?><!--
 * This file is part of the LibreOffice project.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 *
 * This file incorporates work covered by the following license notice:
 *
 *   Licensed to the Apache Software Foundation (ASF) under one or more
 *   contributor license agreements. See the NOTICE file distributed
 *   with this work for additional information regarding copyright
 *   ownership. The ASF licenses this file to you under the Apache
 *   License, Version 2.0 (the "License"); you may not use this file
 *   except in compliance with the License. You may obtain a copy of
 *   the License at http://www.apache.org/licenses/LICENSE-2.0 .
-->
<resources>

    <string name="application_name">Impress Remote</string>

    <string name="title_computers">Computers</string>
    <string name="title_generic">Generic</string>
    <string name="title_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_wifi" translatable="false">WiFi</string>
    <string name="title_settings">Settings</string>
    <string name="title_requirements">Requirements</string>
    <string name="title_connection">Connection</string>
    <string name="title_creation">Creation</string>
    <string name="title_slide_show">Slide show</string>
    <string name="title_timer">Timer</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_requirements">Requirements</string>
    <string name="menu_reconnect">Reconnect</string>
    <string name="menu_add_computer">Add computer</string>
    <string name="menu_start_discovery">Start Discovery</string>
    <string name="menu_remove_computer">Remove</string>
    <string name="menu_slides_grid">Slides grid</string>
    <string name="menu_slides_pager">Slides pager</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_stop_slide_show">Stop slide show</string>
    <string name="menu_pause_slide_show">Pause slide show</string>
    <string name="menu_resume_slide_show">Resume slide show</string>
    <string name="menu_start_pointer">Laser pointer</string>
    <string name="menu_stop_pointer">Exit laser pointer</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_start">Start</string>
    <string name="button_remove">Remove</string>

    <string name="message_impress_pin_validation">Go to “Slide Show → Impress Remote” in LibreOffice Impress and enter the code.</string>
    <string name="message_connection_failed_title">Connection failed</string>
    <string name="message_impress_remote_enabling">Make sure you have enabled remote control. Go to “Tools → Options → LibreOffice Impress → General” in LibreOffice Impress.</string>
    <string name="message_impress_wifi_enabling">You should also enable experimental features using “Tools → Options → LibreOffice → Advanced”.</string>
    <string name="message_impress_pairing_check">In case of Bluetooth pairing issues, please read the documentation supplied by your Operating System.</string>
    <string name="message_ip_address_validation">Please enter a valid IP address.</string>
    <string name="message_time_is_up">Time is up!</string>
    <string name="message_search_wifi">Please ensure that LibreOffice is running on a computer connected to the same WiFi network.</string>
    <string name="message_search_bluetooth">Please ensure that LibreOffice is running on a computer with enabled Bluetooth.</string>
    <string name="message_learn_more"><a href="org.libreoffice.impressremote://requirements/">Learn more</a></string>
    <string name="message_paused">Paused</string>
    <string name="message_notes_empty">Nothing here.</string>
    <string name="hint_ip_address">IP address</string>
    <string name="hint_name">Name (optional)</string>

    <string name="header_notes">Notes</string>

    <string name="mask_slide_show_progress">Slide %1$d of %2$d</string>
    <plurals name="mask_timer_progress">
        <item quantity="one">One minute left</item>
        <item quantity="other">%d minutes left</item>
    </plurals>

    <string name="description_pager_slide">Slide preview</string>
    <string name="description_grid_slide">Slide preview</string>
    <string name="description_empty_slide">Empty slide</string>

    <string name="preferences_volume_keys_actions_title">Volume keys actions</string>
    <string name="preferences_volume_keys_actions_summary">Switch slides and activate animations using volume keys</string>
    <string name="preferences_keep_screen_on_title">Keep screen on</string>
    <string name="preferences_keep_screen_on_summary">Ensures that your phone does not go to sleep during a presentation.</string>
    <string name="preferences_quiet_mode_title">Quiet mode</string>
    <string name="preferences_quiet_mode_summary">Make phone silent (but enable vibration) during a presentation.</string>

    <string name="requirements_libreoffice_version">LibreOffice version 4.0.3 or higher running on a computer.</string>
    <string name="requirements_libreoffice_general_enabled">Impress Remote enabled at “Tools → Options → LibreOffice Impress → General” in LibreOffice Impress.</string>
    <string name="requirements_libreoffice_experimental_enabled">Experimental features enabled at “Tools → Options → LibreOffice → Advanced” in LibreOffice Impress.</string>
    <string name="requirements_network_connection">The Android device and a computer connected to the same network.</string>
    <string name="requirements_network_ports">If you have a firewall please ensure ports 1598 and 1599 are opened.</string>
    <string name="requirements_bluetooth_connection">A computer with enabled Bluetooth.</string>
    <string name="title_activity_new_computers">NewComputersActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
