<?xml version="1.0" encoding="utf-8"?>
<!--
 * This file is part of the LibreOffice project.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 *
 * This file incorporates work covered by the following license notice:
 *
 *   Licensed to the Apache Software Foundation (ASF) under one or more
 *   contributor license agreements. See the NOTICE file distributed
 *   with this work for additional information regarding copyright
 *   ownership. The ASF licenses this file to you under the Apache
 *   License, Version 2.0 (the "License"); you may not use this file
 *   except in compliance with the License. You may obtain a copy of
 *   the License at http://www.apache.org/licenses/LICENSE-2.0 .
-->
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.CheckBoxPreference
        android:key="volume_keys_actions"
        android:defaultValue="true"
        android:title="@string/preferences_volume_keys_actions_title"
        android:summary="@string/preferences_volume_keys_actions_summary"/>

    <android.support.v7.preference.CheckBoxPreference
        android:key="keep_screen_on"
        android:defaultValue="true"
        android:title="@string/preferences_keep_screen_on_title"
        android:summary="@string/preferences_keep_screen_on_summary"/>

    <android.support.v7.preference.CheckBoxPreference
        android:key="quiet_mode"
        android:defaultValue="false"
        android:title="@string/preferences_quiet_mode_title"
        android:summary="@string/preferences_quiet_mode_summary"/>

    <android.support.v7.preference.CheckBoxPreference
        android:key="shake_action"
        android:defaultValue="false"
        android:title="@string/preferences_shake_action_title"
        android:summary="@string/preferences_shake_action_summary"/>

</android.support.v7.preference.PreferenceScreen>